fixes to spacing borders font size

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -178,7 +178,8 @@ button.reset:hover:not(:has(> *)) {
   position: sticky;
   top: 0;
   z-index: 1;
-  font-family: InterVariable, sans-serif;
+  font-family: HelveticaOwn, sans-serif;
+  font-size: 0.85rem;
 }
 
 .header-logo-container {
@@ -190,7 +191,7 @@ button.reset:hover:not(:has(> *)) {
 
 #header-logo-text {
   font-family: "Times New Roman", Times, serif;
-  font-size: 4rem;
+  font-size: 3rem;
   text-decoration: none;
   font-weight: 200;
 }
@@ -254,8 +255,8 @@ button.reset:hover:not(:has(> *)) {
   align-items: center;
   display: flex;
   grid-gap: 1rem;
-  padding: 1rem 3.5rem 1rem;
-  height: 210px;
+  padding: 2rem 3.5rem 1rem;
+  height: 230px;
   max-height: 270px;
 }
 
@@ -270,38 +271,45 @@ button.reset:hover:not(:has(> *)) {
   justify-content: start;
   gap: 1rem;
   margin-top: auto;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
+}
 
+.footer-menu-social-container a {
+  font-size: 0.85rem;
 }
 
 .left-footer-container {
-  border: 1px solid red;
+  /*border: 1px solid red;*/
   width: 50%;
   display: flex;
   flex-direction: column;
   align-items: start;
-  height: 100%;
+  height: 85%;
 }
 
 .right-footer-container {
   display: flex;
   flex-direction: column;
   align-items: end;
-  border: 1px solid blue;
+  /*border: 1px solid blue;*/
   width: 50%;
-  height: 100%;
+  height: 85%;
 }
 
 .footer-policy-container {
-  border: 1px solid red;
+  /*border: 1px solid red;*/
   margin-top: auto;
   display: flex;
   flex-direction: row;
   gap: 2rem;
 }
 
+.footer-policy-container a {
+  font-size: 0.85rem;
+}
+
 .newsletter-caption-container {
-  border: 1px solid orangered;
+  /*border: 1px solid orangered;*/
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -317,7 +325,6 @@ button.reset:hover:not(:has(> *)) {
 }
 
 .newsletter-signup-form-container {
-  border: 1px solid darkgreen;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
